# R-NaD-StS2

./: .gitignore  .gitmodules  AGENTS.md  README.ja.md  README.md  build_recorder_mod.bat  build_recorder_mod.ps1  deploy.sh  deploy_and_launch.sh  deploy_recorder_mod.sh  inference.sh  launch.sh  patch_lib.rs.patch  record_sts2.sh  reload_sim.sh  test_logic.py  test_reflection.cs  test_rust.py  train.sh  train_offline_sts2.sh
GDExtension/: Cargo.toml  ai_bridge.gdextension
GDExtension/src/: lib.rs
R-NaD/: bridge_actions.py  bridge_backup.py  bridge_logger.py  bridge_reward.py  bridge_simulator.py  bridge_state.py  bridge_training.py  bridge_vocab.py  download_human_data.py  event_dict.py  experiment.py  inference_sts2.py  libpython_fixer.c  live_ui.py  live_ui_server.py  record_sts2.py  requirements.txt  requirements_sts2_gpu.txt  rnad_bridge.py  setup.py  temp.txt  test_event_encoding.py  test_id_mapping.py  test_slug.py  train_offline_sts2.py  train_sts2.py  ui.py  visualize_trajectories.py
battle_simulator/: Cargo.toml
battle_simulator/src/: card.rs  creature.rs  encoder.rs  lib.rs  search.rs  state.rs  vocabulary.rs
communication-mod/: ActionExecutor.cs  AiSlayer.cs  CardSelectionPatch.cs  GameCommands.cs  GameStateProvider.cs  MainFile.cs  Utilities.cs  ai_bridge.gdextension  build_output.txt  communication-mod.csproj  communication-mod.sln  communication_mod.csproj  communication_mod.json  communication_mod.sln  export_presets.cfg  mod_manifest.json  project.godot
docs/: architecture.ja.md  architecture.md  battle_simulator.md  retry_specification.md
(+45 files in other folders)
