[package]
name = "ai_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["api-4-5"] }
pyo3 = { version = "0.20", features = ["auto-initialize"] }
serde_json = "1.0" # JSON handling for convenience
