[package]
name = "battle_simulator"
version = "0.1.0"
edition = "2021"

[lib]
name = "battle_simulator"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vdiff"
path = "src/bin/vdiff.rs"

[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
similar = "2.7.0"
